# C__IDE

./: .gitignore  CMakeLists.txt  CodeEditor.cpp  CodeEditor.hpp  Highlighter.cpp  Highlighter.hpp  LocalClient.cpp  LocalClient.h  MainWindow.cpp  MainWindow.hpp  NetServer.cpp  NetServer.hpp  NetSocket.cpp  NetSocket.hpp  README.md  main.cpp  mainwindow.ui
AST/: ASCIIParser.cpp  ASCIIParser.hpp  CodeParser.cpp  CodeParser.hpp  JSONStruct.cpp  JSONStruct.hpp  JSONVar.cpp  JSONVar.hpp  NodePrefix.cpp  NodePrefix.hpp  NodeToken.cpp  NodeToken.hpp  NodeType.cpp  NodeType.hpp  tinyexpr.c  tinyexpr.h
DataStructures/: MemoryNode.cpp  MemoryNode.h  SimpleLinkedList.h
GUI/: CodeEditor.cpp  CodeEditor.hpp  Highlighter.hpp  MainWindow.cpp  MainWindow.hpp
JSON/: JSONparser.cpp  JSONparser.h
Server/: LocalServer.cpp  LocalServer.h
